- bugfix: I cannot type in the "Search" textbox    it doesn't work on mobile";

--- a/app/css/global.scss
+++ b/app/css/global.scss
@@ -21,6 +21,11 @@ div[data-role="header"] {
       overflow: hidden;
       text-overflow: ellipsis;
       max-width: 100%;
+
+      -webkit-user-select: initial;
+      -moz-user-select: initial;
+      -ms-user-select: initial;
+      user-select: initial;
     }
   }
 
